--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,30 +1,57 @@
 [[language]]
 name = "html"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","html"]}
+formatter = {command = "prettier" , args = ["--parser","html"]}
 
 [[language]]
 name = "json"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","json"]}
+formatter = {command = 'prettier' , args = ["--parser","json"]}
 
 [[language]]
 name = "css"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","css"]}
+formatter = {command = 'prettier' , args = ["--parser","css"]}
 
 
 [[language]]
 name = "javascript"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","typescript"]}
+formatter = {command = 'prettier' , args = ["--parser","typescript"]}
 auto-format = true
 
 
 [[language]]
 name = "typescript"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","typescript"]}
+formatter = {command = 'prettier' , args = ["--parser","typescript"]}
 auto-format = true
 
 
 [[language]]
 name = "tsx"
-formatter = {command = 'C:\Users\syien\AppData\Roaming\npm\prettier.cmd' , args = ["--parser","typescript"]}
+formatter = {command = 'prettier' , args = ["--parser","typescript"]}
 auto-format = true
 
+[[language]]
+name = "rust"
+scope = "source.rust"
+injection-regex = "rust"
+file-types = ["rs"]
+roots = ["Cargo.toml", "Cargo.lock"]
+comment-token = "//"
+formatter = {command = "rustfmt"}
+language-server = { command = "rust-analyzer" }
+indent = { tab-width = 4, unit = "    " }
+
+[language.debugger]
+command = "codelldb"
+name = "codelldb"
+port-arg = "--port {}"
+transport = "tcp"
+
+[[language.debugger.templates]]
+name = "binary"
+request = "launch"
+[[language.debugger.templates.completion]]
+completion = "filename"
+name = "binary"
+
+[language.debugger.templates.args]
+program = "{0}"
+runInTerminal = true
