--- a/i3/config
+++ b/i3/config
@@ -417,7 +417,7 @@ bar {
 exec xset r rate 300 50 &
 exec always nitrogen --restore
 exec picom
-
+exec dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
 #####################################################################################################################
 #####################################################################################################################
 #####################################################################################################################
