--- a/i3/config
+++ b/i3/config
@@ -92,7 +92,7 @@ mode "$mode_system" {
 
 
 # ArcoLinux Logout
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 
 #####################################################################################################################
@@ -305,16 +305,9 @@ bindsym $mod+i bar mode invisible
 #####################################################################################################################
 #################                          i3 gaps next                                             #################
 #####################################################################################################################
-
 for_window [class="^.*"] border pixel 1
-gaps inner 10
-gaps outer 1
-#smart_gaps on
-#smart_borders on
-
-
-
-
+smart_gaps on
+smart_borders on
 
 #####################################################################################################################
 #################                          i3 gaps change                                           #################
@@ -379,16 +372,15 @@ exec_always --no-startup-id ~/.config/i3/scripts/mouse.sh
 #####################################################################################################################
 
 bar {
-   	height 10
-	position top
-    font pango:OperatorMono Nerd Font 12
-	status_command i3status
+   	height 2
+	position bottom
+    font pango:OperatorMono Nerd Font 9
     tray_padding 1
     strip_workspace_numbers yes
 
     colors {
             separator  #1f222d
-            background #1f222d
+            background #000000
             statusline #81a1c1
 
             #                   border  background text
@@ -398,6 +390,7 @@ bar {
             urgent_workspace   #1f222d #1f222d    #ee829f
             binding_mode       #1f222d #81a1c1    #2e3440
     }
+        status_command i3status
 }
 
     ##START THEMING WM
@@ -417,7 +410,7 @@ bar {
 exec xset r rate 300 50 &
 exec always nitrogen --restore
 exec picom
-exec dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY &
+
 #####################################################################################################################
 #####################################################################################################################
 #####################################################################################################################
