--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,8 @@ set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+set -g status-style 'bg=#000000 fg=#ffffff'
+set -g status-right '#H'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -14,6 +15,18 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+#fzf
+bind C-j display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --preview 'tmux capture-pane -pt {}'  |\
+    xargs tmux switch-client -t"
+
+#dir
+bind C-t new-session -A -s rust "cd ~/rust/zenlang/ && hx ."
+bind C-] new-session -A -s creoate "cd ~/creoate/retailer-site/ && hx ."
+bind C-[ new-session -A -s goodflows "cd ~/dev/goodflows/goodflows/ && hx ."
+
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -21,4 +34,10 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'sainnhe/tmux-fzf'
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
